--- a/blog.qmd
+++ b/blog.qmd
@@ -3,10 +3,11 @@ title: "Blog Posts"
 listing:
   contents: posts
   sort: "date desc"
-  type: default
+  type: grid
   categories: true
   sort-ui: false
   filter-ui: false
+  fields: [image, date, title, author, reading-time]
 page-layout: full
 title-block-banner: true
 ---
