added example february goals

--- a/notebook/FEB2023/FEB2023.qmd
+++ b/notebook/FEB2023/FEB2023.qmd
@@ -9,7 +9,9 @@ format:
 ---
 
 # Monthly Goals
-To be added
+- Review the Population Dynamics section of the Punt Student reading list
+- Prepare the second draft of the Proposal Presentation for my General Exam
+- Write code to implement a linear ramp for the phasing in harvest control rule for Ch. 1
 
 # Daily Snapshots
 
