--- a/index.qmd
+++ b/index.qmd
@@ -16,6 +16,7 @@ about:
       href: https://github.com/kpjohnson
 
 ---
+
 # Thank you for visiting!
 
 In terms of academic identity, I consider myself an early career fisheries scientist and aspiring stock assessment analyst with a background in marine biology. (In real life, I am a human just doing her best.) I am a PhD student at the University of Washington School of Aquatic and Fishery Sciences.
@@ -26,3 +27,6 @@ In terms of academic identity, I consider myself an early career fisheries scien
 - **KPJ interests:** Big sister (N=4); Fantasy novels & media; Video games (RPGs and rogue-likes); Handicrafts
 - **Academic keywords:** scientific uncertainty, stock assessment, management strategy evaluation, harvest control rules, uncertainty buffers
 - **Favorite fish:** *Mola mola*
+
+
+# Testing
