--- a/notebook/MAR2023/MAR2023.qmd
+++ b/notebook/MAR2023/MAR2023.qmd
@@ -18,6 +18,11 @@ format:
 
 # Daily Snapshots
 
+## 14 - 16 March 2023
+- a marathon of slide deck building, season 5 of Queer Eye, reading papers, and receiving great mentorship
+- I passed my General Exam! 
+- I'm going to take Spring Break off
+
 ## 13 March 2023
 - finished Ch. 1 section of final draft slide deck
 - produced best available plots from Ch. 1 for slide deck
